# awesome-trident-tests

./: README.md
solana-auditors-bootcamp-fuzz-tests/2024/jupiter-lock-by-thelezend/project-fuzzing/: README.md
solana-auditors-bootcamp-fuzz-tests/2024/jupyter-lock-by-thelezend/project-fuzzing/: README.md  report.md
solana-auditors-bootcamp-fuzz-tests/2024/raydium-cp-swap-by-0xm4ud/project-fuzzing/raydium-cp-swap/: Trident.toml  tes.py
solana-auditors-bootcamp-fuzz-tests/2024/raydium-cp-swap-by-0xm4ud/project-fuzzing/raydium-cp-swap/trident-tests/fuzz_tests/: Cargo.toml
solana-auditors-bootcamp-fuzz-tests/2024/raydium-cp-swap-by-0xm4ud/project-fuzzing/raydium-cp-swap/trident-tests/fuzz_tests/fuzz_0/: test_fuzz.rs
solana-auditors-bootcamp-fuzz-tests/2024/raydium-cp-swap-by-0xm4ud/project-fuzzing/raydium-cp-swap/trident-tests/fuzz_tests/fuzzing/hfuzz_workspace/fuzz_0/: HONGGFUZZ.REPORT.TXT
solana-auditors-bootcamp-fuzz-tests/2024/squads-protocol-v4-by-ilyxabatko/project-fuzzing/: README.md
solana-auditors-bootcamp-fuzz-tests/2024/squads-protocol-v4-by-ilyxabatko/project-fuzzing/squads-v4/programs/squads_multisig_program/: Cargo.toml
solana-auditors-bootcamp-fuzz-tests/2024/squads-protocol-v4-by-ilyxabatko/project-fuzzing/squads-v4/programs/squads_multisig_program/src/: lib.rs
solana-auditors-bootcamp-fuzz-tests/2024/squads-protocol-v4-by-ilyxabatko/project-fuzzing/squads-v4/programs/squads_multisig_program/src/instructions/: mod.rs  multisig_config.rs  program_config.rs  program_config_init.rs
solana-auditors-bootcamp-fuzz-tests/2024/squads-protocol-v4-by-ilyxabatko/project-fuzzing/squads-v4/programs/squads_multisig_program/src/state/: mod.rs  multisig.rs
solana-auditors-bootcamp-fuzz-tests/2024/squads-protocol-v4-by-ilyxabatko/project-fuzzing/squads-v4/trident-tests/fuzz_tests/: Cargo.toml
solana-auditors-bootcamp-fuzz-tests/2024/squads-protocol-v4-by-ilyxabatko/project-fuzzing/squads-v4/trident-tests/fuzz_tests/fuzz_3/: accounts_snapshots.rs  fuzz_instructions.rs  test_fuzz.rs
solana-auditors-bootcamp-fuzz-tests/2024/zeta-chain-protocol-by-abdulsamijay/: README.md
solana-auditors-bootcamp-fuzz-tests/2024/zeta-chain-protocol-by-abdulsamijay/project-fuzzing/: README.md
solana-auditors-bootcamp-fuzz-tests/2024/zeta-chain-protocol-by-abdulsamijay/project-fuzzing/ackee-task-1/trident-tests/fuzz_tests/: Cargo.toml
solana-auditors-bootcamp-fuzz-tests/2024/zeta-chain-protocol-by-abdulsamijay/project-fuzzing/ackee-task-1/trident-tests/fuzz_tests/fuzz_0/: accounts_snapshots.rs  fuzz_instructions.rs  test_fuzz.rs
solana-auditors-bootcamp-fuzz-tests/fuzzing-with-trident-0xm4ud/: README.md
solana-auditors-bootcamp-fuzz-tests/fuzzing-with-trident-0xm4ud/project-fuzzing/: README.md
solana-auditors-bootcamp-fuzz-tests/fuzzing-with-trident-0xm4ud/project-fuzzing/raydium-cp-swap/: Anchor.toml
(+22 files in other folders)
