[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"


[dependencies]
honggfuzz = "0.5.56"
arbitrary = "1.3.0"
assert_matches = "1.4.0"
anchor-spl = { version = "0.29.0", features = ["associated_token", "idl-build", "metadata", "mint", "token", "token_2022"] }
spl-associated-token-account = "*"
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
spl-token = "*"
spl-memo = "*" 

[dependencies.trident-client]
version = "0.7.0"

[dependencies.raydium-cp-swap]
path = "../../programs/cp-swap"
