[package]
name = "squads-multisig-program"
version = "2.0.0"
description = "Squads Multisig Program V4"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "squads_multisig_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
testing = []
default = []
trident-fuzzing = ["dep:trident-fuzz"]

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["allow-missing-optionals"] }
anchor-spl = { version="=0.29.0", features=["token"] }
solana-program = "1.17.4"
solana-security-txt = "1.1.1"
ahash = "0.8.9"
trident-derive-accounts-snapshots = "0.0.1"
trident-fuzz = { version = "0.1.0", optional = true}

[patch.crates-io]
ahash = { version = "0.8.9", default-features = false }