[[bin]]
name = "fuzz_3"
path = "fuzz_3/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
honggfuzz = "0.5.56"
arbitrary = "1.3.0"
assert_matches = "1.4.0"
anchor-spl = { version = "0.29.0", features = ["default"] }

[dependencies.trident-client]
version = "0.7.0"

[dependencies.squads-multisig-program]
path = "../../programs/squads_multisig_program"
