[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
honggfuzz = "0.5.56"
arbitrary = "1.3.0"
assert_matches = "1.4.0"
solana-program = "=1.18.23" 
secp256k1 = {version = "0.29.1", features = ["recovery"]}
sha3 = "0.10.8"


[dependencies.trident-client]
version = "0.7.0"

[dependencies.solana-project-fuzz]
path = "../../programs/solana-project-fuzz"
